--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@zapal/payload-lexical-react",
   "version": "1.0.0",
   "description": "Payload CMS rich text Lexical editor to React JSX renderer",
+  "private": false,
   "author": {
     "name": "Zapal",
     "email": "hello@zapal.tech",
