--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "jsdom": "^24.0.0",
     "lexical": "^0.15.0",
     "lint-staged": "^15.2.2",
-    "payload": "^2.18.3",
+    "payload": "3.0.0-beta.34",
     "prettier": "^3.2.5",
     "typescript": "^5.4.5",
     "vite": "^5.2.11",
