--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zapal/payload-lexical-react",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "Payload CMS rich text Lexical editor to React JSX renderer",
   "private": false,
   "author": {
@@ -53,7 +53,7 @@
     "test:ui": "vitest --ui"
   },
   "peerDependencies": {
-    "lexical": "^0.15.0",
+    "lexical": "^0.16.0",
     "react": "^19 || >19.0.0-rc",
     "react-dom": "^19 || >19.0.0-rc"
   },
@@ -61,29 +61,30 @@
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
     "@ianvs/prettier-plugin-sort-imports": "^4.2.1",
-    "@lexical/list": "^0.15.0",
-    "@lexical/rich-text": "^0.15.0",
-    "@payloadcms/richtext-lexical": "3.0.0-beta.34",
+    "@lexical/list": "^0.16.0",
+    "@lexical/rich-text": "^0.16.0",
+    "@payloadcms/richtext-lexical": "3.0.0-beta.41",
+    "@testing-library/dom": "^10.1.0",
     "@testing-library/jest-dom": "^6.4.5",
-    "@testing-library/react": "^15.0.7",
-    "@types/node": "^20.12.13",
+    "@testing-library/react": "^16.0.0",
+    "@types/node": "^20.14.2",
     "@types/react": "npm:types-react@beta",
     "@types/react-dom": "npm:types-react-dom@beta",
-    "@typescript-eslint/eslint-plugin": "^7.11.0",
-    "@typescript-eslint/parser": "^7.11.0",
+    "@typescript-eslint/eslint-plugin": "^7.12.0",
+    "@typescript-eslint/parser": "^7.12.0",
     "@vitejs/plugin-react": "^4.3.0",
     "@vitest/ui": "^1.6.0",
-    "babel-plugin-react-compiler": "0.0.0-experimental-487cb0e-20240529",
+    "babel-plugin-react-compiler": "0.0.0-experimental-938cd9a-20240601",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react-hooks": "^4.6.2",
     "husky": "^9.0.11",
     "jsdom": "^24.1.0",
-    "lexical": "^0.15.0",
+    "lexical": "^0.16.0",
     "lint-staged": "^15.2.5",
-    "payload": "3.0.0-beta.37",
-    "prettier": "^3.2.5",
+    "payload": "3.0.0-beta.41",
+    "prettier": "^3.3.1",
     "typescript": "^5.4.5",
     "vite": "^5.2.12",
     "vite-plugin-dts": "^3.9.1",
