--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zapal/payload-lexical-react",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "Payload CMS rich text Lexical editor to React JSX renderer",
   "private": false,
   "author": {
@@ -54,8 +54,7 @@
   },
   "peerDependencies": {
     "lexical": "^0.16.0",
-    "react": "^19 || >19.0.0-rc",
-    "react-dom": "^19 || >19.0.0-rc"
+    "react": "^19 || >19.0.0-rc"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.3.0",
@@ -63,18 +62,18 @@
     "@ianvs/prettier-plugin-sort-imports": "^4.2.1",
     "@lexical/list": "^0.16.0",
     "@lexical/rich-text": "^0.16.0",
-    "@payloadcms/richtext-lexical": "3.0.0-beta.41",
+    "@payloadcms/richtext-lexical": "3.0.0-beta.43",
     "@testing-library/dom": "^10.1.0",
     "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/react": "^16.0.0",
     "@types/node": "^20.14.2",
-    "@types/react": "npm:types-react@beta",
-    "@types/react-dom": "npm:types-react-dom@beta",
+    "@types/react": "npm:types-react@19.0.0-beta.2",
+    "@types/react-dom": "npm:types-react-dom@19.0.0-beta.2",
     "@typescript-eslint/eslint-plugin": "^7.12.0",
     "@typescript-eslint/parser": "^7.12.0",
     "@vitejs/plugin-react": "^4.3.0",
     "@vitest/ui": "^1.6.0",
-    "babel-plugin-react-compiler": "0.0.0-experimental-938cd9a-20240601",
+    "babel-plugin-react-compiler": "latest",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
@@ -83,17 +82,21 @@
     "jsdom": "^24.1.0",
     "lexical": "^0.16.0",
     "lint-staged": "^15.2.5",
-    "payload": "3.0.0-beta.41",
+    "payload": "3.0.0-beta.43",
     "prettier": "^3.3.1",
     "typescript": "^5.4.5",
-    "vite": "^5.2.12",
+    "vite": "^5.2.13",
     "vite-plugin-dts": "^3.9.1",
     "vitest": "^1.6.0"
   },
   "pnpm": {
     "overrides": {
-      "@types/react": "npm:types-react@beta",
-      "@types/react-dom": "npm:types-react-dom@beta"
+      "@types/react": "npm:types-react@19.0.0-beta.2",
+      "@types/react-dom": "npm:types-react-dom@19.0.0-beta.2"
     }
+  },
+  "overrides": {
+    "@types/react": "npm:types-react@19.0.0-beta.2",
+    "@types/react-dom": "npm:types-react-dom@19.0.0-beta.2"
   }
 }
