--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zapal/payload-lexical-react",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "Payload CMS rich text Lexical editor to React JSX renderer",
   "private": false,
   "author": {
@@ -43,7 +43,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives",
+    "lint": "eslint . --ext ts,tsx",
     "lint:types": "tsc",
     "prepare": "node scripts/prepare",
     "prepublishOnly": "pnpm build",
@@ -59,31 +59,31 @@
   "devDependencies": {
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
-    "@ianvs/prettier-plugin-sort-imports": "^4.2.1",
-    "@lexical/list": "^0.16.0",
-    "@lexical/rich-text": "^0.16.0",
-    "@payloadcms/richtext-lexical": "3.0.0-beta.43",
-    "@testing-library/dom": "^10.1.0",
-    "@testing-library/jest-dom": "^6.4.5",
+    "@ianvs/prettier-plugin-sort-imports": "^4.3.0",
+    "@lexical/list": "^0.16.1",
+    "@lexical/rich-text": "^0.16.1",
+    "@payloadcms/richtext-lexical": "3.0.0-beta.60",
+    "@testing-library/dom": "^10.3.1",
+    "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/react": "^16.0.0",
-    "@types/node": "^20.14.2",
+    "@types/node": "^20.14.10",
     "@types/react": "npm:types-react@19.0.0-beta.2",
     "@types/react-dom": "npm:types-react-dom@19.0.0-beta.2",
-    "@typescript-eslint/eslint-plugin": "^7.12.0",
-    "@typescript-eslint/parser": "^7.12.0",
-    "@vitejs/plugin-react": "^4.3.0",
+    "@typescript-eslint/eslint-plugin": "^7.16.0",
+    "@typescript-eslint/parser": "^7.16.0",
+    "@vitejs/plugin-react": "^4.3.1",
     "@vitest/ui": "^1.6.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "husky": "^9.0.11",
     "jsdom": "^24.1.0",
-    "lexical": "^0.16.0",
-    "lint-staged": "^15.2.5",
-    "payload": "3.0.0-beta.43",
-    "prettier": "^3.3.1",
-    "typescript": "^5.4.5",
-    "vite": "^5.2.13",
+    "lexical": "^0.16.1",
+    "lint-staged": "^15.2.7",
+    "payload": "3.0.0-beta.60",
+    "prettier": "^3.3.2",
+    "typescript": "^5.5.3",
+    "vite": "^5.3.3",
     "vite-plugin-dts": "^3.9.1",
     "vitest": "^1.6.0"
   },
