--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zapal/payload-lexical-react",
-  "version": "1.3.2",
+  "version": "1.3.3",
   "description": "Payload CMS rich text Lexical editor to React JSX renderer",
   "private": false,
   "author": {
@@ -53,7 +53,7 @@
     "test:ui": "vitest --ui"
   },
   "peerDependencies": {
-    "lexical": "^0.16.0",
+    "lexical": "0.16 || ^0.17",
     "react": "^19 || >19.0.0-rc"
   },
   "devDependencies": {
