--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zapal/payload-lexical-react",
-  "version": "1.4.0",
+  "version": "1.5.0",
   "description": "Payload CMS rich text Lexical editor to React JSX renderer",
   "private": false,
   "author": {
@@ -53,37 +53,38 @@
     "test:ui": "vitest --ui"
   },
   "peerDependencies": {
-    "lexical": "^0.17",
-    "react": "^19 || >19.0.0-rc"
+    "lexical": "^0.18",
+    "react": "^19 || >19.0.0-rc",
+    "react-dom": "^19 || >19.0.0-rc"
   },
   "devDependencies": {
-    "@commitlint/cli": "^19.3.0",
-    "@commitlint/config-conventional": "^19.2.2",
-    "@ianvs/prettier-plugin-sort-imports": "^4.3.0",
-    "@lexical/list": "^0.17.0",
-    "@lexical/rich-text": "^0.17.0",
-    "@payloadcms/richtext-lexical": "3.0.0-beta.60",
-    "@testing-library/dom": "^10.3.1",
-    "@testing-library/jest-dom": "^6.4.6",
-    "@testing-library/react": "^16.0.0",
-    "@types/node": "^20.14.10",
+    "@commitlint/cli": "^19.5.0",
+    "@commitlint/config-conventional": "^19.5.0",
+    "@ianvs/prettier-plugin-sort-imports": "^4.3.1",
+    "@lexical/list": "^0.18.0",
+    "@lexical/rich-text": "^0.18.0",
+    "@payloadcms/richtext-lexical": "3.0.0-beta.112",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/react": "^16.0.1",
+    "@types/node": "^20.16.11",
     "@types/react": "npm:types-react@19.0.0-rc.1",
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
-    "@typescript-eslint/eslint-plugin": "^7.16.0",
-    "@typescript-eslint/parser": "^7.16.0",
-    "@vitejs/plugin-react": "^4.3.1",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
+    "@vitejs/plugin-react": "^4.3.2",
     "@vitest/ui": "^1.6.0",
-    "eslint": "^8.57.0",
+    "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "husky": "^9.0.11",
-    "jsdom": "^24.1.0",
-    "lexical": "^0.17.0",
-    "lint-staged": "^15.2.7",
-    "payload": "3.0.0-beta.60",
-    "prettier": "^3.3.2",
-    "typescript": "^5.5.3",
-    "vite": "^5.3.3",
+    "eslint-plugin-prettier": "^5.2.1",
+    "husky": "^9.1.6",
+    "jsdom": "^24.1.3",
+    "lexical": "^0.18.0",
+    "lint-staged": "^15.2.10",
+    "payload": "3.0.0-beta.112",
+    "prettier": "^3.3.3",
+    "typescript": "^5.6.3",
+    "vite": "^5.4.8",
     "vite-plugin-dts": "^3.9.1",
     "vitest": "^1.6.0"
   },
