--- a/package.json
+++ b/package.json
@@ -1,14 +1,8 @@
 {
   "name": "@zapal/payload-lexical-react",
   "version": "1.5.0",
-  "description": "Payload CMS rich text Lexical editor to React JSX renderer",
   "private": false,
-  "author": {
-    "name": "Zapal",
-    "email": "hello@zapal.tech",
-    "url": "https://www.zapal.tech"
-  },
-  "license": "MIT",
+  "description": "Payload CMS rich text Lexical editor to React JSX renderer",
   "keywords": [
     "payload",
     "cms",
@@ -25,14 +19,13 @@
     "type": "git",
     "url": "https://github.com/zapal-tech/payload-lexical-react.git"
   },
+  "license": "MIT",
+  "author": {
+    "name": "Zapal",
+    "email": "hello@zapal.tech",
+    "url": "https://www.zapal.tech"
+  },
   "type": "module",
-  "main": "dist/index.cjs",
-  "files": [
-    "dist",
-    "package.json",
-    "README.md"
-  ],
-  "types": "./dist/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
@@ -40,27 +33,28 @@
       "require": "./dist/dist/payload-lexical-react.umd.js"
     }
   },
+  "main": "dist/index.cjs",
+  "types": "./dist/index.d.ts",
+  "files": [
+    "dist",
+    "package.json",
+    "README.md"
+  ],
   "scripts": {
-    "dev": "vite",
     "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx",
+    "dev": "vite",
+    "format": "prettier --write \"src/**/*.{ts,tsx,js,json,json5,html,gql,graphql,md,css,scss}\"",
+    "lint": "eslint src",
     "lint:types": "tsc",
     "prepare": "node scripts/prepare",
     "prepublishOnly": "pnpm build",
-    "prettier": "prettier --write \"src/**/*.{ts,tsx,js,json,json5,html,gql,graphql,md,css,scss}\"",
     "preview": "vite preview",
     "test": "vitest",
     "test:ui": "vitest --ui"
   },
-  "peerDependencies": {
-    "lexical": "^0.18",
-    "react": "^19 || >19.0.0-rc",
-    "react-dom": "^19 || >19.0.0-rc"
-  },
   "devDependencies": {
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
-    "@ianvs/prettier-plugin-sort-imports": "^4.3.1",
     "@lexical/list": "^0.18.0",
     "@lexical/rich-text": "^0.18.0",
     "@payloadcms/richtext-lexical": "3.0.0-beta.112",
@@ -70,13 +64,10 @@
     "@types/node": "^20.16.11",
     "@types/react": "npm:types-react@19.0.0-rc.1",
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "@typescript-eslint/parser": "^7.18.0",
     "@vitejs/plugin-react": "^4.3.2",
     "@vitest/ui": "^1.6.0",
-    "eslint": "^8.57.1",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.2.1",
+    "@zapal/dx": "^1.2.0",
+    "eslint": "^9.12.0",
     "husky": "^9.1.6",
     "jsdom": "^24.1.3",
     "lexical": "^0.18.0",
@@ -88,6 +79,12 @@
     "vite-plugin-dts": "^3.9.1",
     "vitest": "^1.6.0"
   },
+  "peerDependencies": {
+    "lexical": "^0.18",
+    "react": "^19 || >19.0.0-rc",
+    "react-dom": "^19 || >19.0.0-rc"
+  },
+  "packageManager": "pnpm@9.12.0",
   "pnpm": {
     "overrides": {
       "@types/react": "npm:types-react@19.0.0-rc.1",
