--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zapal/payload-lexical-react",
-  "version": "1.5.0",
+  "version": "1.6.0",
   "private": false,
   "description": "Payload CMS rich text Lexical editor to React JSX renderer",
   "keywords": [
@@ -55,9 +55,9 @@
   "devDependencies": {
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
-    "@lexical/list": "^0.18.0",
-    "@lexical/rich-text": "^0.18.0",
-    "@payloadcms/richtext-lexical": "3.0.0-beta.112",
+    "@lexical/list": "^0.20.0",
+    "@lexical/rich-text": "^0.20.0",
+    "@payloadcms/richtext-lexical": "^3.0.2",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
@@ -70,9 +70,9 @@
     "eslint": "^9.12.0",
     "husky": "^9.1.6",
     "jsdom": "^24.1.3",
-    "lexical": "^0.18.0",
+    "lexical": "^0.20.0",
     "lint-staged": "^15.2.10",
-    "payload": "3.0.0-beta.112",
+    "payload": "^3.0.2",
     "prettier": "^3.3.3",
     "typescript": "^5.6.3",
     "vite": "^5.4.8",
@@ -80,7 +80,7 @@
     "vitest": "^1.6.0"
   },
   "peerDependencies": {
-    "lexical": "^0.18",
+    "lexical": "^0.20",
     "react": "^19 || >19.0.0-rc",
     "react-dom": "^19 || >19.0.0-rc"
   },
