--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zapal/payload-lexical-react",
-  "version": "1.6.0",
+  "version": "1.7.0",
   "private": false,
   "description": "Payload CMS rich text Lexical editor to React JSX renderer",
   "keywords": [
@@ -55,24 +55,24 @@
   "devDependencies": {
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
-    "@lexical/list": "^0.20.0",
-    "@lexical/rich-text": "^0.20.0",
-    "@payloadcms/richtext-lexical": "^3.0.2",
+    "@lexical/list": "^0.21.0",
+    "@lexical/rich-text": "^0.21.0",
+    "@payloadcms/richtext-lexical": "^3.17.1",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
     "@types/node": "^20.16.11",
-    "@types/react": "npm:types-react@19.0.0-rc.1",
-    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
+    "@types/react": "19.0.7",
+    "@types/react-dom": "19.0.3",
     "@vitejs/plugin-react": "^4.3.2",
     "@vitest/ui": "^1.6.0",
     "@zapal/dx": "^1.2.0",
     "eslint": "^9.12.0",
     "husky": "^9.1.6",
     "jsdom": "^24.1.3",
-    "lexical": "^0.20.0",
+    "lexical": "^0.21.0",
     "lint-staged": "^15.2.10",
-    "payload": "^3.0.2",
+    "payload": "^3.17.1",
     "prettier": "^3.3.3",
     "typescript": "^5.6.3",
     "vite": "^5.4.8",
@@ -80,19 +80,9 @@
     "vitest": "^1.6.0"
   },
   "peerDependencies": {
-    "lexical": "^0.20",
-    "react": "^19 || >19.0.0-rc",
-    "react-dom": "^19 || >19.0.0-rc"
+    "lexical": "^0.21.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
-  "packageManager": "pnpm@9.12.0",
-  "pnpm": {
-    "overrides": {
-      "@types/react": "npm:types-react@19.0.0-rc.1",
-      "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
-    }
-  },
-  "overrides": {
-    "@types/react": "npm:types-react@19.0.0-rc.1",
-    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
-  }
+  "packageManager": "pnpm@9.15.4"
 }
