--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zapal/payload-lexical-react",
-  "version": "1.7.0",
+  "version": "1.8.0",
   "private": false,
   "description": "Payload CMS rich text Lexical editor to React JSX renderer",
   "keywords": [
@@ -53,36 +53,38 @@
     "test:ui": "vitest --ui"
   },
   "devDependencies": {
-    "@commitlint/cli": "^19.5.0",
-    "@commitlint/config-conventional": "^19.5.0",
-    "@lexical/list": "^0.21.0",
-    "@lexical/rich-text": "^0.21.0",
-    "@payloadcms/richtext-lexical": "^3.17.1",
+    "@commitlint/cli": "^19.8.0",
+    "@commitlint/config-conventional": "^19.8.0",
+    "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
+    "@lexical/list": "^0.28.0",
+    "@lexical/rich-text": "^0.28.0",
+    "@payloadcms/richtext-lexical": "^3.31.0",
     "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.5.0",
-    "@testing-library/react": "^16.0.1",
-    "@types/node": "^20.16.11",
-    "@types/react": "19.0.7",
-    "@types/react-dom": "19.0.3",
-    "@vitejs/plugin-react": "^4.3.2",
-    "@vitest/ui": "^1.6.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "@types/node": "^22.13.14",
+    "@types/react": "19.0.12",
+    "@types/react-dom": "19.0.4",
+    "@vitejs/plugin-react": "^4.3.4",
+    "@vitest/ui": "^3.0.9",
     "@zapal/dx": "^1.2.0",
-    "eslint": "^9.12.0",
-    "husky": "^9.1.6",
+    "eslint": "^9.23.0",
+    "husky": "^9.1.7",
     "jsdom": "^24.1.3",
-    "lexical": "^0.21.0",
-    "lint-staged": "^15.2.10",
-    "payload": "^3.17.1",
-    "prettier": "^3.3.3",
+    "lexical": "^0.28.0",
+    "lint-staged": "^15.5.0",
+    "payload": "^3.31.0",
+    "prettier": "^3.5.3",
+    "prettier-plugin-packagejson": "^2.5.10",
     "typescript": "^5.6.3",
-    "vite": "^5.4.8",
-    "vite-plugin-dts": "^3.9.1",
-    "vitest": "^1.6.0"
+    "vite": "^6.2.3",
+    "vite-plugin-dts": "^4.5.3",
+    "vitest": "^3.0.9"
   },
   "peerDependencies": {
-    "lexical": "^0.21.0",
+    "lexical": "^0.28.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
-  "packageManager": "pnpm@9.15.4"
+  "packageManager": "pnpm@10.7.0"
 }
